--- a/viewer/prj.conf
+++ b/viewer/prj.conf
@@ -49,5 +49,5 @@ CONFIG_SHELL_BACKEND_SERIAL=y
 CONFIG_LOG_CMDS=y
 
 CONFIG_BT_CENTRAL=y
-CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_MAX_CONN=2
+# CONFIG_BT_PERIPHERAL=y
+# CONFIG_BT_MAX_CONN=2
