--- a/BaseNode_ESP32/prj.conf
+++ b/BaseNode_ESP32/prj.conf
@@ -1,8 +1,24 @@
 CONFIG_BT=y
+CONFIG_BT_HCI=y
+
 CONFIG_BT_CENTRAL=y
-CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_PERIPHERAL=n
+CONFIG_JSON_LIBRARY=y
+
+CONFIG_BT_GATT_CLIENT=y
+CONFIG_BT=y
+CONFIG_BT_OBSERVER=y       
+CONFIG_BT_CENTRAL=y         #
 CONFIG_BT_GATT_CLIENT=y
 
-CONFIG_BT_MAX_CONN=2
-CONFIG_GPIO=y
 
+# Logging
+CONFIG_PRINTK=y
+CONFIG_LOG=y
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_NANO=y
+
+
+CONFIG_REBOOT=y
+
+CONFIG_CBPRINTF_FP_SUPPORT=y
