--- a/viewer/prj.conf
+++ b/viewer/prj.conf
@@ -39,8 +39,8 @@ CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_SHELL_LOG_BACKEND=y
+CONFIG_REBOOT=y
 
-# Tweak buffer sizes if needed
 CONFIG_SHELL_CMD_BUFF_SIZE=128
 CONFIG_SHELL_PRINTF_BUFF_SIZE=64
 
@@ -49,5 +49,12 @@ CONFIG_SHELL_BACKEND_SERIAL=y
 CONFIG_LOG_CMDS=y
 
 CONFIG_BT_CENTRAL=y
-# CONFIG_BT_PERIPHERAL=y
-# CONFIG_BT_MAX_CONN=2
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_MAX_CONN=3
+
+CONFIG_BT_L2CAP_TX_BUF_COUNT=10
+CONFIG_BT_BUF_ACL_TX_COUNT=10
+CONFIG_BT_BUF_EVT_RX_COUNT=16
+
+CONFIG_MINIMAL_LIBC=n
+CONFIG_PICOLIBC=y
